2010-01-27  Pablo de la Concepción <pablo.concepcion@artica.es>

	* include/functions_gis.php: Updated getMapConf to work with the new 
	database model;

2010-01-27 Miguel de Dios  <miguel.dedios@artica.es>
	* include/functions_gis.php: add the prototipe of function "saveMap2" at
	the moment for to develop in next hours or days.
	* include/javascript/jquery.json.js: add json plugin for jquery.
	* godmode/gis_maps/configure_gis_map.php: rewrite all source code, change
	the form and adapt to new gis tables.
	* godmode/gis_maps/index.php: few changes for more correct source code.

2010-01-27  Pablo de la Concepción <pablo.concepcion@artica.es>

	* include/functions_gis.php: Added more Openlayers Controls to the case
	on the printMap function, fixed typo manual_placemen -> manual_placement,
	added gectConectionConf and getAgentMap functions (last one still with 
	some hardcoded values). Function get_agent_last_coords now also returns the
	agent name.

	* operation/agentes/estado_generalagente.php: Added last position 
	information, and timezone offset if is not 0

	* operation/agentes/gis_view.php: Added map with the last position of the
	agent and table with the previous positions of the agent.

	* operation/agentes/ver_agente.php: Used agent icon to show status 
	 if icon_path is defined.

2010-01-26 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: add functions "saveMapConnection" and
	"deleteMapConnection".

	* godmode/setup/gis_step_2.php, godmode/setup/gis.php: add the forms to
	make, edit and delete map connections.

2010-01-25  Sancho Lerena <slerena@artica.es>

	* include/functions.php: Fixed problem in show_event_type() function
	who mades events.php to do a invalid filtering by event status.

	* operation/events/events_rss.php: Added optional (commented code)
	support for filtering RSS request by the API ACL. need to implement a switch
	in the config array to use here ACLs or not.
